--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,17 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="user-scalable=no,
+                   initial-scale=1,
+                   maximum-scale=1,
+                   minimum-scale=1,
+                   width=device-width,
+                   height=device-height">
 
-    <title>Reagent/Figwheel Template</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable"       content="yes">
+    <meta http-equiv="x-ua-compatible"        content="ie=edge">
+    <meta http-equiv="Cache-Control"          content="no-cache,no-store,must-revalidate">
+    <meta http-equiv="Pragma"                 content="no-cache">
+    <meta http-equiv="Expires"                content="0">
+
+    <script src="assets/uix/js/main.js" defer></script>
+    <title>Retemp App</title>
   </head>
   <body>
-    <div id="app">
-      <h2>Loading...</h2>
-    </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/compiled/retemp.js" type="text/javascript"></script>
+    <div id="core"></div>
   </body>
 </html>
