--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -19,8 +19,8 @@
     <meta http-equiv="Pragma"                 content="no-cache">
     <meta http-equiv="Expires"                content="0">
 
-    <script src="assets/js/retemp.js" defer></script>
-    <title>retemp</title>
+    <script src="assets/js/telsos.fe.js" defer></script>
+    <title>telsos.fe</title>
   </head>
   <body>
     <div id="core"></div>
