--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -19,6 +19,7 @@
     <meta http-equiv="Pragma"                 content="no-cache">
     <meta http-equiv="Expires"                content="0">
 
+    <link href="assets/css/main.css" rel="stylesheet">
     <script src="assets/js/main.js" defer></script>
     <title>telsos.ui (with reagent)</title>
   </head>
